Update footer note

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <div class="description">
       <p>Traverse the infinite space pipes by rotating the direction of gravity using A and D</p>
-      <p class="note">NOTE: Build is currently only optimized for Microsoft Edge. Using any other browser may cause performance
+      <p class="note">NOTE: Build is currently only optimized for Google Chrome and Microsoft Edge. Using any other browser may cause performance
         or rendering issues.</p>
     </div>
     <div class="other-info"> 
