--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="other-info"> 
 
       <h4>Build: Alpha 1.0<h4>
-      <p> Game developed by: <a href="https://github.com/RylandWang">Ryland W.</a></p>
+      <p> Author: <a href="https://github.com/RylandWang">Ryland W.</a></p>
     </div>
   </div>
 </body>
